<resources>
    <string name="app_name">MyTestApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_main2">MainActivity2</string>

    <string name="block_user">사용자 차단</string>
    <string name="report_user">사용자 신고</string>
    <string name="select_report_reason">신고 사유를 선택해주세요</string>
    <string name="reason_spam">스팸 메시지</string>
    <string name="reason_harassment">성희롱</string>
    <string name="reason_lie">거짓 정보 입력</string>
    <string name="reason_other">기타 사유</string>
    <string name="report">신고하기</string>
    <string name="matching_user">매칭하기</string>
    <string name="cancel">취소</string>
    <string name="matching_list_title">매칭 목록</string>
    <string name="chat_list_title">채팅 목록</string>
    <string name="menu_icon_description">Menu icon</string>
    <string name="chat_room_title">chatRoomTitle</string>
    <string name="chat_input_hint">  채팅을 입력해주세요</string>
    <string name="send_button_description">Send</string>
    <string name="hint_other_reason">기타 사유를 입력하세요</string>


</resources>