<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_report_reason"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:padding="16dp" />

    <RadioGroup
        android:id="@+id/radioGroupReasons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonSpam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reason_spam" />

        <RadioButton
            android:id="@+id/radioButtonHarassment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reason_harassment" />

        <RadioButton
            android:id="@+id/radioButtonNudity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reason_lie" />

        <RadioButton
            android:id="@+id/radioButtonOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reason_other" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:background="@color/light_orange"
        android:textColor="@color/black"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@color/light_orange"
        android:textColor="@color/black"
        android:layout_marginTop="8dp" />
</LinearLayout>
